Time Sheet/main/default/objects/Time_Sheet__c/Time_Sheet__c.object-meta.xml
<CustomObject>
    <label>Time Sheet</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>