Time Sheet/main/default/objects/Time_Sheet__c/fields/Absence_Category__c.field-meta.xml
<CustomField>
    <fullName>Absence_Category__c</fullName>
    <label>Absence Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Duty</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Permission</fullName>
            </value>
            <value>
                <fullName>PTO-Planned</fullName>
            </value>
            <value>
                <fullName>PTO-Un Planned</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>