Time Sheet/main/default/objects/Time_Sheet__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Either Start Time and End Time, or the Duration is required.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>