Time Sheet/main/default/objects/Time_Sheet__c/fields/Duration_Cal_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Duration_Cal_Formula_Field__c</fullName>
    <formula>((((End_Time__c - Start_Time__c) / 1000)/60)/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Cal Formula Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>