Time Sheet/main/default/objects/Time_Sheet__c/fields/Hours_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Hours_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Exceeded?</label>
    <type>Checkbox</type>
</CustomField>