Time Sheet/main/default/objects/Time_Sheet__c/recordTypes/Absence_Type.recordType-meta.xml
<RecordType>
    <fullName>Absence_Type</fullName>
    <active>true</active>
    <label>Absence Type</label>
</RecordType>