Time Sheet/main/default/objects/Time_Sheet__c/recordTypes/Absence_Type_Locked.recordType-meta.xml
<RecordType>
    <fullName>Absence_Type_Locked</fullName>
    <active>true</active>
    <label>Absence Type Locked</label>
</RecordType>