Time Sheet/main/default/objects/Time_Sheet__c/recordTypes/Attendance_Type.recordType-meta.xml
<RecordType>
    <fullName>Attendance_Type</fullName>
    <active>true</active>
    <label>Attendance Type</label>
</RecordType>