Time Sheet/main/default/objects/Time_Sheet__c/recordTypes/Attendance_Type_Locked.recordType-meta.xml
<RecordType>
    <fullName>Attendance_Type_Locked</fullName>
    <active>true</active>
    <label>Attendance Type Locked</label>
</RecordType>