Time Sheet/main/default/objects/Time_Sheet__c/validationRules/Prevent_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(RecordType.DeveloperName = &apos;Absence_Type&apos;, RecordType.DeveloperName = &apos;Absence_Type_Locked&apos;)),
TODAY() &lt; Date__c)</errorConditionFormula>
    <errorMessage>Date should not be the future date</errorMessage>
</ValidationRule>