Time Sheet/main/default/objects/Time_Sheet__c/validationRules/Start_and_End_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Time_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Start_Time__c &gt; End_Time__c, Start_Time__c = End_Time__c)</errorConditionFormula>
    <errorMessage>Start Time should only be less than End Time,</errorMessage>
</ValidationRule>