Time Sheet/main/default/objects/Time_Sheet__c/validationRules/Time_and_Duration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_and_Duration_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( AND( ISBLANK( Start_Time__c ) , ISBLANK( End_Time__c ) ) , ISBLANK( Duration__c ) )</errorConditionFormula>
    <errorMessage>Either Start Time and End Time or the Duration is required</errorMessage>
</ValidationRule>