Time Sheet/main/default/objects/Time_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Project__c</columns>
    <columns>Activity__c</columns>
    <columns>Absence_Category__c</columns>
    <columns>Duration__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>